Jenkins/Deployment/jenkinsIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.regional-static-ip-name: "doube7-jenkins-ingress-internal-static-ip"
spec:
  rules:
  - host: jenkins.double7.com
    http:
      paths:
      - backend:
          service:
            name: jenkins-service
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: sonarqube.double7.com
    http:
      paths:
      - backend:
          service:
            name: sonarqube-service
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 10.10.1.5
